css/styles.css
/* ... */
.homeSection1 {
  width: 100vw, 100%;
  height: 710px;
  /* border: 2px solid green; */
  margin-bottom: 2em;
  padding-top: 1em;
}

.homeLast {
  text-align: center;
  /* margin-bottom: 3em; */
  padding-top: 5em;
}

.arrow {
  border: solid #fffffe;
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 7px;

}

.down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}


.homeSection2 {
  background-color: #fffffe;
  text-align: center;
  height: auto;
}


/* .homeSection2Description {
  padding-bottom: 3em;
  border: 2px solid red;
  max-width: 750px;
  min-width: 400px;
  height: 515px;
} */
.homeSection2Description {
  padding-bottom: 3em;
  /* border: 2px solid red; */
  max-width: 750px;
  min-width: 400px;
  height: 515px;
  box-sizing: border-box;
}

.hs2Scroll {
  /* border: 1px solid blue; */
  overflow-y: scroll;
  scrollbar-width: none;
  max-width: 750px;
  height: 410px;
  padding: 3em 7em;
}

.homeSection2Description h1 {
  display: inline-block;
  border-bottom: 2px solid #7f5af0;
  margin: 0 auto;
  padding-top: 1em;
  font-size: 50px;
  color: #0F0E17;
  font-weight: 500;
  padding-bottom: 10px;
  margin-right: 3.5em;
  margin-left: 3em;
  margin-bottom: 7px;
}

/* CAROUSEL */
/* .slideshow,
.details {
    max-width: 800px;
    height: auto;
    border: 1px solid #0F0E17;
} */
.slideshow {
  flex: 1;
  min-width: 500px;
  height: auto;
  border: 1px solid #0F0E17;
  overflow: hidden;
}

/* CAROUSEL */

.hs2Text {
  border: 2px solid black;
  background-color: #0f0e17;
  color: white;
  margin-right: 11em;
  padding: 1em 2em;
  padding-bottom: 3em;
  text-align: left;
  margin: 0 auto;
  margin-bottom: 3em;
  line-height: 1.5;
}

.homeSection2Flex {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  min-height: 500px;
}



/* PROJECT PAGE------------------------------------------------------------------------------ */

.projectSection1 {
  background-color: #16161a;
  padding-top: 10em;
  padding-bottom: 5em;
  width: 100vw, 100%;
  height: 100%;
}

.ps1Description {
  padding: 1em 3em;

}

.projectImage1 {
  width: 300px;
  height: 200px;

}

.projectImage4 {
  width: 300px;
  height: 300px;
}
.projectImage5 {
  width: 300px;
  height: 200px;
  object-fit: cover;
}



/* .ps1Flex {
  display: flex;
  justify-content: space-between;
  margin-top: 1em;
  border: 3px solid white;
  width: 800px;
  margin: 0 auto;
  background-color: #fffffe;
  margin-bottom: 5em;
  padding-left: 0;
} */
.ps1Flex {
  display: flex;
  justify-content: space-between;
  margin-top: 1em;
  width: 800px;
  margin: 0 auto;
  background-color: #0F0E17;
  margin-bottom: 2em;
  padding-left: 0;

  border: 5px solid;
}

/* Wanted to incorporate a gradient like we did in class to the border */
/* https://www.geeksforgeeks.org/gradient-borders/ */

.ps1Flex:hover {
  border: 5px solid;
  border-image-source: linear-gradient(194deg, rgba(127, 90, 240, 1) 22%, rgba(44, 182, 125, 1) 100%);
  border-image-slice: 1;
}

.ps1Flex h1,
.ps1Flex p {
  color: #fffffe;
}

.ps1Link {
  text-decoration: none;
  color: #fffffe;
  transition: transform 0.3s ease;
  display: inline-block;

}

a.ps1Link:hover {
  transform: scale(1.1);
}

.posterLink {
  color: #2cb67d;

}

.posterLink:hover {
  color: #7f5af0;
}

footer {
  background-color: #0F0E17;
  color: white;
  padding: 2em 2em;

}

/* PROJECT PAGE------------------------------------------------------------------------------ */

/* RESUME PAGE------------------------------------------------------------------------------ */
.resumeSection1 {
  background-color: #16161a;
  padding-top: 3em;
  width: 100vw, 100%;
  height: 900px;
}

.resumeSection1 h1 {
  color: #fffffe;
  font-size: 45px;
}

.resumeSection1 h3 {
  color: #fffffe;
  font-size: 30px
}

.resumeSection1 p {
  color: #fffffe;
  font-size: 20px;
  max-width: 30ch;


}

.resumeFlex {
  /* border: 1px solid purple; */
  display: flex;
  justify-content: space-around;
  padding-top: 4em;
}

.resumeImage {
  width: 600px;
  height: auto;
  border: 3px solid lightslategray;
}

.resumeFlexDescription {
  /* border: 1px solid green; */
  margin-top: 1em;
  height: fit-content;
  margin-left: 8em;
}

.resumeLink {
  color: #7f5af0;

}

.resumeLink:hover {
  color: #2cb67d;
}

.resumeHeader {
  border-bottom: 2px groove #7f5af0;
  display: inline-block;
}

.resumeCategory {
  /* border: 1px solid blue; */
}

.resumeCategory p {
  /* border: 1px solid white; */
  margin-bottom: 1em;
  padding-bottom: 2em;
  margin-top: 0;
}

/* RESUME PAGE------------------------------------------------------------------------------ */

/* CONTACT PAGE------------------------------------------------------------------------------ */
.contactSection1 {
  background-color: #16161a;
  padding-top: 3em;
  width: 100vw, 100%;
  height: auto;
}

.contactSection1 h1 {
  color: #fffffe;
  font-size: 45px;
  /* border: 2px solid green; */
  /* padding-left: 4em; */
  text-align: center;

}

.contactSection1 a {
  display: block;
  /* border: 1px solid green; */
  padding-top: 22px;
  padding-left: 5px;
}

.fa-linkedin {
  color: white;
  font-size: 25px;
  margin-right: 10px;
}

.fa-envelope {
  color: white;
  font-size: 25px;
  margin-right: 10px;

}

.fa-facebook {
  color: white;
  font-size: 25px;
  margin-right: 10px;

}

.fa-instagram {
  color: white;
  font-size: 25px;
  margin-right: 10px;
}

.fa-instagram:hover,
.fa-envelope:hover,
.fa-facebook:hover,
.fa-linkedin:hover {
  color: #7f5af0;
}

.email {
  text-decoration: none;
  color: #fffffe;
}

.email:hover {
  color: #7f5af0
}

.iconTitle1 {
  font-size: 25px;
}

.contactInfo {
  display: flex;
  /* border: 1px solid red; */
  padding-left: 1em;
  /* border-right: 1px solid #2cb6b1; */


}

.contactInfo1 {
  display: flex;
  color: white;
  font-size: 20px;
  align-items: center;
}

.contactInfo1 a {
  padding: 0 0 0 10px;

}

.contactInfo p {
  color: white;
  font-size: 20px;
  margin-right: 10px;

}
/* ... */

